--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,6 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - name: Configure Bundler
-        run: |
-          bundle config --local path .bundle/gems
-          bundle config --local without docs
       - name: Configure Nokogiri installation (Linux)
         if: matrix.os == 'ubuntu-latest'
         run: |
@@ -71,9 +67,16 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Install Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
       - name: Install dependencies
         run: |
+          bundle --jobs 3 --retry 3
           npm ci
+      - name: Build
+        run: bundle exec rake build:js
       - name: Run examples and tests
         run: |
           npm run examples
