--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
   build_ruby:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         ruby: ['2.3', '2.4', '2.5', '2.6']
         include:
           - os: ubuntu-latest
@@ -55,7 +55,7 @@ jobs:
   build_js:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: ubuntu-latest
         node-version: ['12.x', '14.x', '15.x']
         include:
           - os: macos-latest
