--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Node ${{ matrix.node-version }}
+      - name: Install Node
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
